--- a/index.html
+++ b/index.html
@@ -12,3 +12,5 @@
 
 
 <iframe title="Renta per Capita / Emisión TOtal" aria-label="Diagrama de dispersión" id="datawrapper-chart-UPgvA" src="https://datawrapper.dwcdn.net/UPgvA/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
+
+<iframe width="1034" height="640" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSfJ2BzL2cUw3SrU1yvKOZgxX6wMM808vBeI2zAW--HfAKGCCT9BzHXzWxBlkXjRX6eZ-hKJUi87Bnw/pubchart?oid=616331276&amp;format=interactive"></iframe>
