--- a/index.html
+++ b/index.html
@@ -1,38 +1,77 @@
 <!-- Esto es un comentario -->
 
 <head>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.2/d3plus.full.min.js">
-</script>
-
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.2/d3plus.full.min.js"></script>
 </head>
 
+<h1>Visualización – AG1</h1>
 
-<h1>Visualización – AG1 </h1>
+<b> Nombre:</b> Esteban Fernández Mañanes <br />
 
-<b> Nombre:</b> Esteban Fernández Mañanes <br>
+<b> URL:</b>
+<a href="https://js-bunmie.stackblitz.io"> https://js-bunmie.stackblitz.io </a>
+<br />
 
-<b> URL:</b> <a href="https://js-bunmie.stackblitz.io"> https://js-bunmie.stackblitz.io </a> <br>
- 
-<b> URL:</b> <a href="https://github.com/seideling/08MBID"> https://github.com/seideling/08MBID </a> <br>
+<b> URL:</b>
+<a href="https://github.com/seideling/08MBID">
+  https://github.com/seideling/08MBID
+</a>
+<br />
 
-<iframe width="897" height="555" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSfJ2BzL2cUw3SrU1yvKOZgxX6wMM808vBeI2zAW--HfAKGCCT9BzHXzWxBlkXjRX6eZ-hKJUi87Bnw/pubchart?oid=1589118755&amp;format=interactive"></iframe>
+<iframe
+  width="897"
+  height="555"
+  seamless
+  frameborder="0"
+  scrolling="no"
+  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSfJ2BzL2cUw3SrU1yvKOZgxX6wMM808vBeI2zAW--HfAKGCCT9BzHXzWxBlkXjRX6eZ-hKJUi87Bnw/pubchart?oid=1589118755&amp;format=interactive"
+></iframe>
 
+<iframe
+  title="Renta per Capita / Emisión TOtal"
+  aria-label="Diagrama de dispersión"
+  id="datawrapper-chart-UPgvA"
+  src="https://datawrapper.dwcdn.net/UPgvA/1/"
+  scrolling="no"
+  frameborder="0"
+  style="border: none"
+  width="600"
+  height="400"
+></iframe>
 
-<iframe title="Renta per Capita / Emisión TOtal" aria-label="Diagrama de dispersión" id="datawrapper-chart-UPgvA" src="https://datawrapper.dwcdn.net/UPgvA/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
+<iframe
+  width="1034"
+  height="640"
+  seamless
+  frameborder="0"
+  scrolling="no"
+  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSfJ2BzL2cUw3SrU1yvKOZgxX6wMM808vBeI2zAW--HfAKGCCT9BzHXzWxBlkXjRX6eZ-hKJUi87Bnw/pubchart?oid=616331276&amp;format=interactive"
+></iframe>
 
-
-<iframe width="1034" height="640" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSfJ2BzL2cUw3SrU1yvKOZgxX6wMM808vBeI2zAW--HfAKGCCT9BzHXzWxBlkXjRX6eZ-hKJUi87Bnw/pubchart?oid=616331276&amp;format=interactive"></iframe>
-
-<iframe title="Emisiones CO2 por país, identificando continente" aria-label="Bar Chart" id="datawrapper-chart-c8hni" src="https://datawrapper.dwcdn.net/c8hni/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="335"></iframe>
+<iframe
+  title="Emisiones CO2 por país, identificando continente"
+  aria-label="Bar Chart"
+  id="datawrapper-chart-c8hni"
+  src="https://datawrapper.dwcdn.net/c8hni/1/"
+  scrolling="no"
+  frameborder="0"
+  style="border: none"
+  width="600"
+  height="335"
+></iframe>
 
 <!--
 <iframe title="AG2_Esteban_Fernandez" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=a6d052f7-ce88-48f2-8075-72015c3e5a93&autoAuth=true&ctid=c51bd98a-e945-4522-9a5c-723060761746&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXdlc3QtZXVyb3BlLWUtcHJpbWFyeS1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldC8ifQ%3D%3D" frameborder="0" allowFullScreen="true"></iframe>
 -->
 
-
-
-<h1>Visualización – AG3 </h1>
-<h1> Google Collab </h1>
-<b> URL:</b> <a href="https://colab.research.google.com/drive/1R_XzROv3D_NFcdeIhFnxnJJAVt51lww0?usp=sharing&amp;format=interactive "> https://colab.research.google.com/drive/1R_XzROv3D_NFcdeIhFnxnJJAVt51lww0?usp=sharing&amp;format=interactive  </a> <br>
+<h1>Visualización – AG3</h1>
+<h1>Google Collab</h1>
+<b> URL:</b>
+<a
+  href="https://colab.research.google.com/drive/1R_XzROv3D_NFcdeIhFnxnJJAVt51lww0?usp=sharing&amp;format=interactive "
+>
+  https://colab.research.google.com/drive/1R_XzROv3D_NFcdeIhFnxnJJAVt51lww0?usp=sharing&amp;format=interactive
+</a>
+<br />
